Enabled import of files in Reuters-21578 XML format
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@23 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/trunk/ChangeLog
+++ b/trunk/R/trunk/ChangeLog
@@ -2,6 +2,7 @@
 
 	* R/textdoccol.R: Constructor of textdoccol allows import of CSV
 	files. See the questionnaire data/Umfrage.csv for such an example.
+	We are now able to import files in Reuters-21578 XML format.
 
 	* Changed class interfaces in various files. Weighting of the text
 	matrix is now possible.
