git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@37 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/trunk/ChangeLog
+++ b/trunk/R/trunk/ChangeLog
@@ -1,5 +1,8 @@
 2006-01-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/textdoccol.R: Restructured and extended file import
+	mechanism.
+
 	* inst/doc/clustering.Rnw: Adapted vignette for use with
 	ReutNews.rda
 
