Changed S4 method signatures.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@42 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/trunk/ChangeLog
+++ b/trunk/R/trunk/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Updated generic S4 methods to comply with signature changes
+	in newer versions of R (> 2.3)
+
 2006-03-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* ext/R/importRIS.R: Automatic RIS import is now possible.
