Wrote some documentation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@58 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Wrote some documentation.
+
 2006-09-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Further syntactic sugar in form of additional assignment and
