--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Finished documentation.
+
 2006-09-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Wrote some documentation.
