--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Some changes as suggested by David. The rest will follow
+	within the next days.
+
 2006-09-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* man/: Finished documentation.
