--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Remaining changes as discussed with David.
+
 2006-10-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Some changes as suggested by David. The rest will follow
