--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Revised documentation after previous code changes.
+
 2006-10-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Remaining changes as discussed with David.
