Corrected NAMESPACE. Some minor improvements in the code.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@64 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* NAMESPACE: Corrected exports (generic methods need exportMethods
+	directives!).
+
 2006-10-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Modified the TextDocCol constructur and various parsers. It
