git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@65 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Final changes based upon David's comments.
+
 2006-10-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* NAMESPACE: Corrected exports (generic methods need exportMethods
