Messages now use \code{ngettext}.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@70 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/inst/doc/textmin.Rnw
+++ b/trunk/R/textmin/inst/doc/textmin.Rnw
@@ -29,8 +29,8 @@ This vignette gives a short overview over available features in the
 
 \section{Working with \pkg{textmin}}
 
-\subsection{Loading the Library}
-Before actually working we need to load the library:
+\subsection{Loading the Package}
+Before actually working we need to load the package:
 <<>>=
 library(textmin)
 @
