Added sophisticated merging for document collections.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@71 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,10 @@
+2006-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Merging of document collections now creates a binary tree
+	for reconstructing merged document collections.
+
+	* R/: Redesign of metadata for document collections.
+
 2006-11-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Messages now use \code{ngettext}.
