Rewrote s_filter function.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@73 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Rewrote s_filter function (has still some restrictions).
+
 2006-11-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Various fixes in handling metadata.
