--- a/trunk/R/textmin/ChangeLog
+++ b/trunk/R/textmin/ChangeLog
@@ -1,3 +1,16 @@
+2006-11-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/textdoccol.R (append_doc): Bug fix for handling empty metadata.
+
+	* data/crude.rda: Rebuilt.
+
+	* data/acq.rda: Rebuilt.
+
+	* inst/doc/textmin.Rnw: Updated vignette to reflect code changes.
+
+	* R/textdoccol.R ([): Bug fix for subsetting a document
+	collection's data frame.
+
 2006-11-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R: Bug fixes in s_filter. Added full query support
