--- a/trunk/textmin/ChangeLog
+++ b/trunk/textmin/ChangeLog
@@ -1,3 +1,20 @@
+2006-12-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* man/: Updated documentation.
+
+	* DESCRIPTION: Changed package name to "tm". Updated version to
+	0.1 for first CRAN release.
+
+	* inst/texts/gmane.comp.lang.r.general.mbox: mbox Gmane R mailing
+	list archive example.
+
+	* inst/texts/gmane.comp.lang.r.gr.rdf: RSS Gmane R mailing list
+	archive example.
+
+	* R/preprocess.R (convert_mbox_eml): A simple e-mail converter
+	from (several mails per box) mbox format to (single mail per file)
+	eml format.
+
 2006-12-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* data/crude.rda: Rebuilt.
